nth-child of the home page box fixed and also the nav-link gap incresed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,13 @@
   margin: 1.5rem auto;
   text-align: justify;
 }
+.section.p {
+ display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  background-color: #a6a9ab
+}
 
 /* Styling for links within titles with color and text decoration */
 .title a {
@@ -58,6 +65,7 @@
   display: flex;
   justify-content: space-around;
   width: 30%;
+  gap: 1rem;
 }
 
 /* Styling for links within titles on hover, focus, and active */
@@ -108,6 +116,13 @@
   max-width: 100%;
   margin-top: 3rem;
   margin-bottom: 2rem;
+}
+.card p{
+min-height: 150px;
+ display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
 }
 
 /* Styling for a card element with padding, border, and transition */
@@ -216,17 +231,9 @@ padding: 10px;
   font-weight: 900;
 }
 
-/* Media query for smaller screens */
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
 
 /* Media query for smaller screens */
-@media (max-width: 600px) {
+@media (max-width: 768px) {
 
   .navbar {
     flex-direction: column;
@@ -236,6 +243,7 @@ padding: 10px;
   .nav_link {
     width: 100%;
     justify-content: space-around;
+    gap: 1rem;
     margin-top: 1rem;
   }
 
@@ -277,6 +285,17 @@ padding: 10px;
   .error {
     font-size: 1rem; /* Adjust font size for smaller screens */
   }
+
+
   
 }
+
+
+   
+  @media (min-width: 780px) {
+  .card:nth-child(4) h3 {
+    font-size: 23px; /* Adjust the font size as needed */
+  }
+}
+
 
